Update from https://github.com/thebesttv/eserver-static/commit/cd166b2b5d68d9fcb725135a8711ab0919d31d8c

--- a/content/collections/tools.html
+++ b/content/collections/tools.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-<!-- 2022-12-05 22:16 -->
+<!-- 2022-12-06 02:44 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>有用的工具</title>
@@ -45,18 +45,18 @@
 <h2>&#30446;&#24405;</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#orgff77318">1. 笔记</a></li>
-<li><a href="#org6b14f83">2. 推送</a></li>
-<li><a href="#orgc8bf52b">3. Git</a></li>
-<li><a href="#orgea728cd">4. XBox</a></li>
-<li><a href="#org9b73561">5. Bilibili</a></li>
+<li><a href="#org16a4661">1. 笔记</a></li>
+<li><a href="#org0b22b95">2. 推送</a></li>
+<li><a href="#org72e3b42">3. Git</a></li>
+<li><a href="#orgfffc106">4. XBox</a></li>
+<li><a href="#orgdf5e2d6">5. Bilibili</a></li>
 </ul>
 </div>
 </nav>
 <hr style="width: 80%;">
 
-<div id="outline-container-orgff77318" class="outline-2">
-<h2 id="orgff77318"><span class="section-number-2">1.</span> <a href="#orgff77318">笔记</a></h2>
+<div id="outline-container-org16a4661" class="outline-2">
+<h2 id="org16a4661"><span class="section-number-2">1.</span> <a href="#org16a4661">笔记</a></h2>
 <div class="outline-text-2" id="text-1">
 <ul class="org-ul">
 <li><a href="https://github.com/xournalpp/xournalpp/">Xournal++</a> 支持数位板的开源笔记软件</li>
@@ -64,8 +64,8 @@
 </div>
 </div>
 
-<div id="outline-container-org6b14f83" class="outline-2">
-<h2 id="org6b14f83"><span class="section-number-2">2.</span> <a href="#org6b14f83">推送</a></h2>
+<div id="outline-container-org0b22b95" class="outline-2">
+<h2 id="org0b22b95"><span class="section-number-2">2.</span> <a href="#org0b22b95">推送</a></h2>
 <div class="outline-text-2" id="text-2">
 <ul class="org-ul">
 <li><a href="https://ntfy.sh/">ntfy.sh</a> 一行 curl 即可使用的推送服务.
@@ -75,8 +75,8 @@
 </div>
 </div>
 
-<div id="outline-container-orgc8bf52b" class="outline-2">
-<h2 id="orgc8bf52b"><span class="section-number-2">3.</span> <a href="#orgc8bf52b">Git</a></h2>
+<div id="outline-container-org72e3b42" class="outline-2">
+<h2 id="org72e3b42"><span class="section-number-2">3.</span> <a href="#org72e3b42">Git</a></h2>
 <div class="outline-text-2" id="text-3">
 <ul class="org-ul">
 <li><a href="https://gource.io/">Gource - a software version control visualization tool</a>
@@ -90,8 +90,8 @@
 </div>
 </div>
 
-<div id="outline-container-orgea728cd" class="outline-2">
-<h2 id="orgea728cd"><span class="section-number-2">4.</span> <a href="#orgea728cd">XBox</a></h2>
+<div id="outline-container-orgfffc106" class="outline-2">
+<h2 id="orgfffc106"><span class="section-number-2">4.</span> <a href="#orgfffc106">XBox</a></h2>
 <div class="outline-text-2" id="text-4">
 <ul class="org-ul">
 <li><a href="https://github.com/zhxie/pcap2socks">pcap2socks</a> 跨平台, 简易, 可以直接利用 SOCKS 代理的加速器, 见<a href="../pcap2socks.html">使用 pcap2socks 加速 XBox</a>
@@ -102,8 +102,8 @@
 </div>
 </div>
 
-<div id="outline-container-org9b73561" class="outline-2">
-<h2 id="org9b73561"><span class="section-number-2">5.</span> <a href="#org9b73561">Bilibili</a></h2>
+<div id="outline-container-orgdf5e2d6" class="outline-2">
+<h2 id="orgdf5e2d6"><span class="section-number-2">5.</span> <a href="#orgdf5e2d6">Bilibili</a></h2>
 <div class="outline-text-2" id="text-5">
 <ul class="org-ul">
 <li><a href="https://github.com/nICEnnnnnnnLee/BilibiliDown">BilibiliDown</a> 视频下载</li>
@@ -117,7 +117,7 @@
   <tr><td class="org-right">Author</td><td class="org-left"></td></tr>
   <tr><td class="org-right">Created</td><td class="org-left"></td></tr>
   <tr><td class="org-right">Modified</td><td class="org-left">2022-12-05 21:48</td></tr>
-  <tr><td class="org-right">Generated</td><td class="org-left">2022-12-05 22:16</td></tr>
+  <tr><td class="org-right">Generated</td><td class="org-left">2022-12-06 02:44</td></tr>
   <tr><td class="org-right">Version</td><td class="org-left"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 28.2 (<a href="https://orgmode.org">Org</a> mode 9.5.5)</td></tr>
   <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://github.com/thebesttv/thebesttv.github.io/blob/main/content/collections/tools.org">content/collections/tools.org</a></td></tr>
 </table>
