--- a/content/daily/2021-05-23.html
+++ b/content/daily/2021-05-23.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-<!-- 2022-12-05 22:16 -->
+<!-- 2022-12-06 02:44 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>不造写啥标题</title>
@@ -46,12 +46,12 @@
 <h2>&#30446;&#24405;</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org99db994">1. 学到了 Emacs - 这次主要是和窗口有关的</a>
+<li><a href="#org93a8296">1. 学到了 Emacs - 这次主要是和窗口有关的</a>
 <ul>
-<li><a href="#orgfd36e07">1.1. window config &amp; register</a></li>
-<li><a href="#org203237e">1.2. <code>C-x 4</code> prefix</a></li>
-<li><a href="#org0bdbbcf">1.3. ace-window - Quickly switch windows in Emacs</a></li>
-<li><a href="#org947b30a">1.4. winner-mode - Undo &amp; redo window changes</a></li>
+<li><a href="#org34a5093">1.1. window config &amp; register</a></li>
+<li><a href="#orgf0c32bb">1.2. <code>C-x 4</code> prefix</a></li>
+<li><a href="#org9cde7f7">1.3. ace-window - Quickly switch windows in Emacs</a></li>
+<li><a href="#org3661cdd">1.4. winner-mode - Undo &amp; redo window changes</a></li>
 </ul>
 </li>
 </ul>
@@ -59,12 +59,12 @@
 </nav>
 <hr style="width: 80%;">
 
-<div id="outline-container-org99db994" class="outline-2">
-<h2 id="org99db994"><span class="section-number-2">1.</span> <a href="#org99db994">学到了 Emacs - 这次主要是和窗口有关的</a></h2>
+<div id="outline-container-org93a8296" class="outline-2">
+<h2 id="org93a8296"><span class="section-number-2">1.</span> <a href="#org93a8296">学到了 Emacs - 这次主要是和窗口有关的</a></h2>
 <div class="outline-text-2" id="text-1">
 </div>
-<div id="outline-container-orgfd36e07" class="outline-3">
-<h3 id="orgfd36e07"><span class="section-number-3">1.1.</span> <a href="#orgfd36e07">window config &amp; register</a></h3>
+<div id="outline-container-org34a5093" class="outline-3">
+<h3 id="org34a5093"><span class="section-number-3">1.1.</span> <a href="#org34a5093">window config &amp; register</a></h3>
 <div class="outline-text-3" id="text-1-1">
 <dl class="org-dl">
 <dt><code>C-x r w</code> (<code>window-configuration-to-register</code>)</dt><dd>Store the window
@@ -78,8 +78,8 @@ restore that frame or all frames accordingly.</dd>
 </div>
 </div>
 
-<div id="outline-container-org203237e" class="outline-3">
-<h3 id="org203237e"><span class="section-number-3">1.2.</span> <a href="#org203237e"><code>C-x 4</code> prefix</a></h3>
+<div id="outline-container-orgf0c32bb" class="outline-3">
+<h3 id="orgf0c32bb"><span class="section-number-3">1.2.</span> <a href="#orgf0c32bb"><code>C-x 4</code> prefix</a></h3>
 <div class="outline-text-3" id="text-1-2">
 <dl class="org-dl">
 <dt><code>C-x 4 f</code>, <code>C-x 4 C-f</code> (<code>find-file-other-window</code>)</dt><dd>Find file by
@@ -102,8 +102,8 @@ log 有关系，8清楚。</dd>
 </div>
 </div>
 
-<div id="outline-container-org0bdbbcf" class="outline-3">
-<h3 id="org0bdbbcf"><span class="section-number-3">1.3.</span> <a href="#org0bdbbcf"><a href="https://github.com/abo-abo/ace-window">ace-window - Quickly switch windows in Emacs</a></a></h3>
+<div id="outline-container-org9cde7f7" class="outline-3">
+<h3 id="org9cde7f7"><span class="section-number-3">1.3.</span> <a href="#org9cde7f7"><a href="https://github.com/abo-abo/ace-window">ace-window - Quickly switch windows in Emacs</a></a></h3>
 <div class="outline-text-3" id="text-1-3">
 <div class="org-src-container">
 <pre class="src src-elisp">(global-set-key (kbd <span style="font-style: italic;">"M-o"</span>) 'ace-window)
@@ -116,8 +116,8 @@ log 有关系，8清楚。</dd>
 </div>
 </div>
 
-<div id="outline-container-org947b30a" class="outline-3">
-<h3 id="org947b30a"><span class="section-number-3">1.4.</span> <a href="#org947b30a"><a href="https://www.emacswiki.org/emacs/WinnerMode">winner-mode - Undo &amp; redo window changes</a></a></h3>
+<div id="outline-container-org3661cdd" class="outline-3">
+<h3 id="org3661cdd"><span class="section-number-3">1.4.</span> <a href="#org3661cdd"><a href="https://www.emacswiki.org/emacs/WinnerMode">winner-mode - Undo &amp; redo window changes</a></a></h3>
 <div class="outline-text-3" id="text-1-4">
 <div class="org-src-container">
 <pre class="src src-elisp">(winner-mode +1)
@@ -136,7 +136,7 @@ log 有关系，8清楚。</dd>
   <tr><td class="org-right">Author</td><td class="org-left">thebesttv</td></tr>
   <tr><td class="org-right">Created</td><td class="org-left">2021-05-23 10:20</td></tr>
   <tr><td class="org-right">Modified</td><td class="org-left">2022-10-10 12:17</td></tr>
-  <tr><td class="org-right">Generated</td><td class="org-left">2022-12-05 22:16</td></tr>
+  <tr><td class="org-right">Generated</td><td class="org-left">2022-12-06 02:44</td></tr>
   <tr><td class="org-right">Version</td><td class="org-left"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 28.2 (<a href="https://orgmode.org">Org</a> mode 9.5.5)</td></tr>
   <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://github.com/thebesttv/thebesttv.github.io/blob/main/content/daily/2021-05-23.org">content/daily/2021-05-23.org</a></td></tr>
 </table>
