--- a/content/collections/index.html
+++ b/content/collections/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-<!-- 2022-12-05 22:16 -->
+<!-- 2022-12-06 02:44 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>收藏夹</title>
@@ -46,48 +46,48 @@
 <h2>&#30446;&#24405;</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org0a09c69">1. 妙妙文章</a>
+<li><a href="#orga0d70b6">1. 妙妙文章</a>
 <ul>
-<li><a href="#org19ede94">1.1. 关于死亡 &#x2014; 让世界知道我来过</a></li>
-<li><a href="#org5b4be0c">1.2. 关于健康 &#x2014; 留得青山在, 不怕没柴烧</a></li>
-<li><a href="#org0489e17">1.3. 关于编码 &#x2014; UTF-8 遍地开花</a></li>
-<li><a href="#org8a2d41e">1.4. 关于编辑器</a></li>
-<li><a href="#orgab228a2">1.5. 关于代码</a>
+<li><a href="#orgd08968a">1.1. 关于死亡 &#x2014; 让世界知道我来过</a></li>
+<li><a href="#org6d2e083">1.2. 关于健康 &#x2014; 留得青山在, 不怕没柴烧</a></li>
+<li><a href="#orgbe89a8a">1.3. 关于编码 &#x2014; UTF-8 遍地开花</a></li>
+<li><a href="#org7c8fc53">1.4. 关于编辑器</a></li>
+<li><a href="#org0eb8c5c">1.5. 关于代码</a>
 <ul>
-<li><a href="#org5c18770">1.5.1. Lisp</a></li>
+<li><a href="#orgf2d1c18">1.5.1. Lisp</a></li>
 </ul>
 </li>
-<li><a href="#org6969c76">1.6. 关于CPU</a></li>
-<li><a href="#org3070228">1.7. 关于算法</a>
+<li><a href="#org59cc23f">1.6. 关于CPU</a></li>
+<li><a href="#org2edaada">1.7. 关于算法</a>
 <ul>
-<li><a href="#org998e1ee">1.7.1. 关于随机</a></li>
+<li><a href="#org11186f7">1.7.1. 关于随机</a></li>
 </ul>
 </li>
-<li><a href="#org9091456">1.8. 关于AI</a></li>
-<li><a href="#orgedb5c77">1.9. 关于软件</a>
+<li><a href="#org57ad717">1.8. 关于AI</a></li>
+<li><a href="#orgd68eafb">1.9. 关于软件</a>
 <ul>
-<li><a href="#org2bf4122">1.9.1. SQLite</a></li>
+<li><a href="#org2fa4d3f">1.9.1. SQLite</a></li>
 </ul>
 </li>
-<li><a href="#orge0e8119">1.10. 关于workflow</a></li>
+<li><a href="#org5454501">1.10. 关于workflow</a></li>
 </ul>
 </li>
-<li><a href="#orgef37952">2. 棒棒视频</a>
+<li><a href="#org1647d16">2. 棒棒视频</a>
 <ul>
-<li><a href="#org11326f0">2.1. Veritasium 真理元素</a></li>
-<li><a href="#org731b8d7">2.2. 迷因水母</a></li>
-<li><a href="#org5dbcbc6">2.3. 各种剧</a></li>
-<li><a href="#org202646a">2.4. 电影</a></li>
+<li><a href="#org737d646">2.1. Veritasium 真理元素</a></li>
+<li><a href="#org6005cdc">2.2. 迷因水母</a></li>
+<li><a href="#org81c57a3">2.3. 各种剧</a></li>
+<li><a href="#org0040386">2.4. 电影</a></li>
 </ul>
 </li>
-<li><a href="#org3c2ee94">3. 快乐游戏</a></li>
-<li><a href="#orgbabfc95">4. 宝藏博主</a></li>
-<li><a href="#org1201d7f">5. 有意思的</a>
+<li><a href="#org437e227">3. 快乐游戏</a></li>
+<li><a href="#orgadf08ca">4. 宝藏博主</a></li>
+<li><a href="#org29e3e17">5. 有意思的</a>
 <ul>
-<li><a href="#orgf9016a2">5.1. 关于网页 &#x2014; HTML &amp; CSS</a></li>
+<li><a href="#org3d00304">5.1. 关于网页 &#x2014; HTML &amp; CSS</a></li>
 </ul>
 </li>
-<li><a href="#org2f62aef">6. 我想玩的</a></li>
+<li><a href="#org2d19547">6. 我想玩的</a></li>
 </ul>
 </div>
 </nav>
@@ -96,8 +96,8 @@
 这里大概会放一些我喜欢的东西🥰
 </p>
 
-<div id="outline-container-org0a09c69" class="outline-2">
-<h2 id="org0a09c69"><span class="section-number-2">1.</span> <a href="#org0a09c69">妙妙文章</a></h2>
+<div id="outline-container-orga0d70b6" class="outline-2">
+<h2 id="orga0d70b6"><span class="section-number-2">1.</span> <a href="#orga0d70b6">妙妙文章</a></h2>
 <div class="outline-text-2" id="text-1">
 <ul class="org-ul">
 <li><a href="https://idealclover.top/archives/627/">2020 年年终总结：致即将 22 岁的自己 &#x2014; 翠翠</a> 你工人爷爷的年终总结</li>
@@ -432,7 +432,7 @@ cards until the game is over.
 有好看的鸟鸟~
 </p>
 
-<figure id="orgc5d6955">
+<figure id="org2fe3d62">
 <img src="./index/raku-inoue-plant-arrangements-19.jpg" alt="raku-inoue-plant-arrangements-19.jpg" width="60%" style="margin-left: auto; margin-right: auto;">
 
 </figure></li>
@@ -505,8 +505,8 @@ Shoot for simplicity and legibility, but keep your distinguishing features.
 </ul>
 </div>
 
-<div id="outline-container-org19ede94" class="outline-3">
-<h3 id="org19ede94"><span class="section-number-3">1.1.</span> <a href="#org19ede94">关于死亡 &#x2014; 让世界知道我来过</a></h3>
+<div id="outline-container-orgd08968a" class="outline-3">
+<h3 id="orgd08968a"><span class="section-number-3">1.1.</span> <a href="#orgd08968a">关于死亡 &#x2014; 让世界知道我来过</a></h3>
 <div class="outline-text-3" id="text-1-1">
 <ul class="org-ul">
 <li><p>
@@ -547,8 +547,8 @@ Shoot for simplicity and legibility, but keep your distinguishing features.
 </div>
 </div>
 
-<div id="outline-container-org5b4be0c" class="outline-3">
-<h3 id="org5b4be0c"><span class="section-number-3">1.2.</span> <a href="#org5b4be0c">关于健康 &#x2014; 留得青山在, 不怕没柴烧</a></h3>
+<div id="outline-container-org6d2e083" class="outline-3">
+<h3 id="org6d2e083"><span class="section-number-3">1.2.</span> <a href="#org6d2e083">关于健康 &#x2014; 留得青山在, 不怕没柴烧</a></h3>
 <div class="outline-text-3" id="text-1-2">
 <ul class="org-ul">
 <li><p>
@@ -582,8 +582,8 @@ have to kill yourself to be good at something.
 </div>
 </div>
 
-<div id="outline-container-org0489e17" class="outline-3">
-<h3 id="org0489e17"><span class="section-number-3">1.3.</span> <a href="#org0489e17">关于编码 &#x2014; UTF-8 遍地开花</a></h3>
+<div id="outline-container-orgbe89a8a" class="outline-3">
+<h3 id="orgbe89a8a"><span class="section-number-3">1.3.</span> <a href="#orgbe89a8a">关于编码 &#x2014; UTF-8 遍地开花</a></h3>
 <div class="outline-text-3" id="text-1-3">
 <ul class="org-ul">
 <li><a href="http://www.hanselman.com/blog/why-the-askobama-tweet-was-garbled-on-screen-know-your-utf8-unicode-ascii-and-ansi-decoding-mr-president">Why the #AskObama Tweet was Garbled on Screen: Know your UTF-8,
@@ -617,8 +617,8 @@ This is not thebesttv.
 </div>
 </div>
 
-<div id="outline-container-org8a2d41e" class="outline-3">
-<h3 id="org8a2d41e"><span class="section-number-3">1.4.</span> <a href="#org8a2d41e">关于编辑器</a></h3>
+<div id="outline-container-org7c8fc53" class="outline-3">
+<h3 id="org7c8fc53"><span class="section-number-3">1.4.</span> <a href="#org7c8fc53">关于编辑器</a></h3>
 <div class="outline-text-3" id="text-1-4">
 <ul class="org-ul">
 <li><p>
@@ -634,8 +634,8 @@ lsp and tree-sitter changed the entire ecosystem of editors.
 </div>
 </div>
 
-<div id="outline-container-orgab228a2" class="outline-3">
-<h3 id="orgab228a2"><span class="section-number-3">1.5.</span> <a href="#orgab228a2">关于代码</a></h3>
+<div id="outline-container-org0eb8c5c" class="outline-3">
+<h3 id="org0eb8c5c"><span class="section-number-3">1.5.</span> <a href="#org0eb8c5c">关于代码</a></h3>
 <div class="outline-text-3" id="text-1-5">
 <ul class="org-ul">
 <li><a href="https://gigamonkeys.com/code-reading/">Code is not literature &#x2014; Peter Seibel</a> Don't read code like it's a
@@ -660,8 +660,8 @@ future.</li>
 </ul>
 </div>
 
-<div id="outline-container-org5c18770" class="outline-4">
-<h4 id="org5c18770"><span class="section-number-4">1.5.1.</span> <a href="#org5c18770">Lisp</a></h4>
+<div id="outline-container-orgf2d1c18" class="outline-4">
+<h4 id="orgf2d1c18"><span class="section-number-4">1.5.1.</span> <a href="#orgf2d1c18">Lisp</a></h4>
 <div class="outline-text-4" id="text-1-5-1">
 <ul class="org-ul">
 <li><a href="http://winestockwebdesign.com/Essays/Lisp_Curse.html">The Lisp Curse &#x2014; Rudolf Winestock</a>
@@ -684,8 +684,8 @@ inspired to create their own game.
 </div>
 </div>
 
-<div id="outline-container-org6969c76" class="outline-3">
-<h3 id="org6969c76"><span class="section-number-3">1.6.</span> <a href="#org6969c76">关于CPU</a></h3>
+<div id="outline-container-org59cc23f" class="outline-3">
+<h3 id="org59cc23f"><span class="section-number-3">1.6.</span> <a href="#org59cc23f">关于CPU</a></h3>
 <div class="outline-text-3" id="text-1-6">
 <ul class="org-ul">
 <li><p>
@@ -700,8 +700,8 @@ Intel并不是在挤牙膏，而是一直在努力探索。只有当你成为Int
 </div>
 </div>
 
-<div id="outline-container-org3070228" class="outline-3">
-<h3 id="org3070228"><span class="section-number-3">1.7.</span> <a href="#org3070228">关于算法</a></h3>
+<div id="outline-container-org2edaada" class="outline-3">
+<h3 id="org2edaada"><span class="section-number-3">1.7.</span> <a href="#org2edaada">关于算法</a></h3>
 <div class="outline-text-3" id="text-1-7">
 <ul class="org-ul">
 <li><a href="https://yonatankra.com/how-to-find-a-unique-number-in-a-list-of-pairs/">How to find a unique number in a list containing <b>pairs</b>?</a> 注意这里其他的数都是成对出现的, 那直接对整个list异或就行啦~ 如果其他数的出现次数不是偶数, 也可以用hash.</li>
@@ -720,8 +720,8 @@ OSTEP 里看到的, 之前一直用的除法, 没想到还要酱写.</li>
 </ul>
 </div>
 
-<div id="outline-container-org998e1ee" class="outline-4">
-<h4 id="org998e1ee"><span class="section-number-4">1.7.1.</span> <a href="#org998e1ee">关于随机</a></h4>
+<div id="outline-container-org11186f7" class="outline-4">
+<h4 id="org11186f7"><span class="section-number-4">1.7.1.</span> <a href="#org11186f7">关于随机</a></h4>
 <div class="outline-text-4" id="text-1-7-1">
 <p>
 Cloudflare 的<a href="https://blog.cloudflare.com/">博客</a>有不少关于熵和随机的帖子
@@ -735,8 +735,8 @@ Linux 的熵池</li>
 </div>
 </div>
 
-<div id="outline-container-org9091456" class="outline-3">
-<h3 id="org9091456"><span class="section-number-3">1.8.</span> <a href="#org9091456">关于AI</a></h3>
+<div id="outline-container-org57ad717" class="outline-3">
+<h3 id="org57ad717"><span class="section-number-3">1.8.</span> <a href="#org57ad717">关于AI</a></h3>
 <div class="outline-text-3" id="text-1-8">
 <ul class="org-ul">
 <li><a href="https://simonwillison.net/2022/Jul/9/gpt-3-explain-code/">Using GPT-3 to explain how code works</a> 没想到GPT-3这么厉害?</li>
@@ -746,8 +746,8 @@ Linux 的熵池</li>
 </div>
 </div>
 
-<div id="outline-container-orgedb5c77" class="outline-3">
-<h3 id="orgedb5c77"><span class="section-number-3">1.9.</span> <a href="#orgedb5c77">关于软件</a></h3>
+<div id="outline-container-orgd68eafb" class="outline-3">
+<h3 id="orgd68eafb"><span class="section-number-3">1.9.</span> <a href="#orgd68eafb">关于软件</a></h3>
 <div class="outline-text-3" id="text-1-9">
 <p>
 大概未经测试的软件总是脆弱的😮‍💨
@@ -758,8 +758,8 @@ Linux 的熵池</li>
 </ul>
 </div>
 
-<div id="outline-container-org2bf4122" class="outline-4">
-<h4 id="org2bf4122"><span class="section-number-4">1.9.1.</span> <a href="#org2bf4122">SQLite</a></h4>
+<div id="outline-container-org2fa4d3f" class="outline-4">
+<h4 id="org2fa4d3f"><span class="section-number-4">1.9.1.</span> <a href="#org2fa4d3f">SQLite</a></h4>
 <div class="outline-text-4" id="text-1-9-1">
 <p>
 作为一个无处不在, 且运行于几乎所有架构与系统的数据库, SQLite 的测试代码量可谓恐怖&#x2014;测试代码行数是 SQLite 库的 608 倍, 几乎十亿行🤯
@@ -773,8 +773,8 @@ Linux 的熵池</li>
 </div>
 </div>
 
-<div id="outline-container-orge0e8119" class="outline-3">
-<h3 id="orge0e8119"><span class="section-number-3">1.10.</span> <a href="#orge0e8119">关于workflow</a></h3>
+<div id="outline-container-org5454501" class="outline-3">
+<h3 id="org5454501"><span class="section-number-3">1.10.</span> <a href="#org5454501">关于workflow</a></h3>
 <div class="outline-text-3" id="text-1-10">
 <ul class="org-ul">
 <li><a href="https://castel.dev/post/research-workflow/">My Mathematics PhD research workflow</a> 一个数学PhD的workflow, 包括LaTeX笔记
@@ -784,8 +784,8 @@ Linux 的熵池</li>
 </div>
 </div>
 
-<div id="outline-container-orgef37952" class="outline-2">
-<h2 id="orgef37952"><span class="section-number-2">2.</span> <a href="#orgef37952">棒棒视频</a></h2>
+<div id="outline-container-org1647d16" class="outline-2">
+<h2 id="org1647d16"><span class="section-number-2">2.</span> <a href="#org1647d16">棒棒视频</a></h2>
 <div class="outline-text-2" id="text-2">
 <ul class="org-ul">
 <li><p>
@@ -844,8 +844,8 @@ Practical, but also works on the human level in this case.
 </ul>
 </div>
 
-<div id="outline-container-org11326f0" class="outline-3">
-<h3 id="org11326f0"><span class="section-number-3">2.1.</span> <a href="#org11326f0">Veritasium 真理元素</a></h3>
+<div id="outline-container-org737d646" class="outline-3">
+<h3 id="org737d646"><span class="section-number-3">2.1.</span> <a href="#org737d646">Veritasium 真理元素</a></h3>
 <div class="outline-text-3" id="text-2-1">
 <ul class="org-ul">
 <li><a href="https://youtu.be/IgF3OX8nT0w">The Most Powerful Computers You've Never Heard Of</a>
@@ -876,8 +876,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-org731b8d7" class="outline-3">
-<h3 id="org731b8d7"><span class="section-number-3">2.2.</span> <a href="#org731b8d7">迷因水母</a></h3>
+<div id="outline-container-org6005cdc" class="outline-3">
+<h3 id="org6005cdc"><span class="section-number-3">2.2.</span> <a href="#org6005cdc">迷因水母</a></h3>
 <div class="outline-text-3" id="text-2-2">
 <ul class="org-ul">
 <li><p>
@@ -892,8 +892,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-org5dbcbc6" class="outline-3">
-<h3 id="org5dbcbc6"><span class="section-number-3">2.3.</span> <a href="#org5dbcbc6">各种剧</a></h3>
+<div id="outline-container-org81c57a3" class="outline-3">
+<h3 id="org81c57a3"><span class="section-number-3">2.3.</span> <a href="#org81c57a3">各种剧</a></h3>
 <div class="outline-text-3" id="text-2-3">
 <ul class="org-ul">
 <li>摩登家庭</li>
@@ -917,8 +917,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-org202646a" class="outline-3">
-<h3 id="org202646a"><span class="section-number-3">2.4.</span> <a href="#org202646a">电影</a></h3>
+<div id="outline-container-org0040386" class="outline-3">
+<h3 id="org0040386"><span class="section-number-3">2.4.</span> <a href="#org0040386">电影</a></h3>
 <div class="outline-text-3" id="text-2-4">
 <ul class="org-ul">
 <li><a href="https://movie.douban.com/subject/2131459/">机器人总动员</a></li>
@@ -944,7 +944,7 @@ and exist, before it is generally received and practiced on.
 <a href="https://movie.douban.com/subject/19899707/">驯龙高手3</a> (再见~)
 </p>
 
-<figure id="orga8bb526">
+<figure id="orgc234c93">
 <img src="./index/dragon3.jpg" alt="dragon3.jpg" width="80%" style="margin-left: auto; margin-right: auto;">
 
 </figure></li>
@@ -962,8 +962,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-org3c2ee94" class="outline-2">
-<h2 id="org3c2ee94"><span class="section-number-2">3.</span> <a href="#org3c2ee94">快乐游戏</a></h2>
+<div id="outline-container-org437e227" class="outline-2">
+<h2 id="org437e227"><span class="section-number-2">3.</span> <a href="#org437e227">快乐游戏</a></h2>
 <div class="outline-text-2" id="text-3">
 <blockquote>
 <p>
@@ -993,8 +993,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-orgbabfc95" class="outline-2">
-<h2 id="orgbabfc95"><span class="section-number-2">4.</span> <a href="#orgbabfc95">宝藏博主</a></h2>
+<div id="outline-container-orgadf08ca" class="outline-2">
+<h2 id="orgadf08ca"><span class="section-number-2">4.</span> <a href="#orgadf08ca">宝藏博主</a></h2>
 <div class="outline-text-2" id="text-4">
 <ul class="org-ul">
 <li><a href="https://idealclover.top/">翠翠 / Idealclover</a></li>
@@ -1005,7 +1005,7 @@ and exist, before it is generally received and practiced on.
 <a href="https://collet66.web.fc2.com/">Syosa's Room</a> 画了很多像素花, 鸟, 狗
 </p>
 
-<figure id="orge8edc77">
+<figure id="org190eb3c">
 <img src="./index/pixel-birds.png" alt="pixel-birds.png" width="80%" style="margin-left: auto; margin-right: auto;">
 
 </figure></li>
@@ -1013,8 +1013,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-org1201d7f" class="outline-2">
-<h2 id="org1201d7f"><span class="section-number-2">5.</span> <a href="#org1201d7f">有意思的</a></h2>
+<div id="outline-container-org29e3e17" class="outline-2">
+<h2 id="org29e3e17"><span class="section-number-2">5.</span> <a href="#org29e3e17">有意思的</a></h2>
 <div class="outline-text-2" id="text-5">
 <ul class="org-ul">
 <li><p>
@@ -1040,8 +1040,8 @@ Always check your friendship before terminating it.  hhhh</li>
 </ul>
 </div>
 
-<div id="outline-container-orgf9016a2" class="outline-3">
-<h3 id="orgf9016a2"><span class="section-number-3">5.1.</span> <a href="#orgf9016a2">关于网页 &#x2014; HTML &amp; CSS</a></h3>
+<div id="outline-container-org3d00304" class="outline-3">
+<h3 id="org3d00304"><span class="section-number-3">5.1.</span> <a href="#org3d00304">关于网页 &#x2014; HTML &amp; CSS</a></h3>
 <div class="outline-text-3" id="text-5-1">
 <ul class="org-ul">
 <li><a href="https://pinecast.com/feed/emacscast">这个网站</a>是 XML 格式的 RSS feed，不过仿佛加了一层 stylesheet 啥的🤔，
@@ -1053,8 +1053,8 @@ Always check your friendship before terminating it.  hhhh</li>
 </div>
 </div>
 
-<div id="outline-container-org2f62aef" class="outline-2">
-<h2 id="org2f62aef"><span class="section-number-2">6.</span> <a href="#org2f62aef">我想玩的</a></h2>
+<div id="outline-container-org2d19547" class="outline-2">
+<h2 id="org2d19547"><span class="section-number-2">6.</span> <a href="#org2d19547">我想玩的</a></h2>
 <div class="outline-text-2" id="text-6">
 <p>
 大概是我想玩的各种游戏, 但因为事情好多好多, 而且只有一个集显笔记本,
@@ -1077,7 +1077,7 @@ Always check your friendship before terminating it.  hhhh</li>
   <tr><td class="org-right">Author</td><td class="org-left">thebesttv</td></tr>
   <tr><td class="org-right">Created</td><td class="org-left">2021-05-19 08:10</td></tr>
   <tr><td class="org-right">Modified</td><td class="org-left">2022-12-02 20:41</td></tr>
-  <tr><td class="org-right">Generated</td><td class="org-left">2022-12-05 22:16</td></tr>
+  <tr><td class="org-right">Generated</td><td class="org-left">2022-12-06 02:44</td></tr>
   <tr><td class="org-right">Version</td><td class="org-left"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 28.2 (<a href="https://orgmode.org">Org</a> mode 9.5.5)</td></tr>
   <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://github.com/thebesttv/thebesttv.github.io/blob/main/content/collections/index.org">content/collections/index.org</a></td></tr>
 </table>
