--- a/content/daily/2022-09-28.html
+++ b/content/daily/2022-09-28.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-<!-- 2022-12-05 22:16 -->
+<!-- 2022-12-06 02:44 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>保研回忆录</title>
@@ -46,19 +46,19 @@
 <h2>&#30446;&#24405;</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org90de6f9">1. 暑假</a>
+<li><a href="#org3751c9c">1. 暑假</a>
 <ul>
-<li><a href="#orgf5ac123">1.1. 夏令营</a></li>
+<li><a href="#orgfc18c7a">1.1. 夏令营</a></li>
 </ul>
 </li>
-<li><a href="#org8c31db0">2. 打工</a></li>
-<li><a href="#orgca75c11">3. 我的928</a>
+<li><a href="#org798b3b5">2. 打工</a></li>
+<li><a href="#org4ad2366">3. 我的928</a>
 <ul>
-<li><a href="#orgb0fa744">3.1. 928演唱会(bushi</a></li>
+<li><a href="#orgdb11b47">3.1. 928演唱会(bushi</a></li>
 </ul>
 </li>
-<li><a href="#orge11d2d3">4. 他们的928</a></li>
-<li><a href="#org6a437e0">5. 总结</a></li>
+<li><a href="#org6cd26cc">4. 他们的928</a></li>
+<li><a href="#org6e352c1">5. 总结</a></li>
 </ul>
 </div>
 </nav>
@@ -68,7 +68,7 @@
 </p>
 
 
-<figure id="org852fa7b">
+<figure id="orge86b286">
 <img src="2022-09-28/928-nju.jpg" alt="928-nju.jpg" width="80%" style="margin-left: auto; margin-right: auto;">
 
 <figcaption><span class="figure-number">&#22270;1&nbsp; </span>南大offer</figcaption>
@@ -91,8 +91,8 @@
 <li><a href="http://www.cskaoyan.com/thread-237791-1-1.html">中科院计算所实验室情况简要介绍</a></li>
 </ul>
 
-<div id="outline-container-org90de6f9" class="outline-2">
-<h2 id="org90de6f9"><span class="section-number-2">1.</span> <a href="#org90de6f9">暑假</a></h2>
+<div id="outline-container-org3751c9c" class="outline-2">
+<h2 id="org3751c9c"><span class="section-number-2">1.</span> <a href="#org3751c9c">暑假</a></h2>
 <div class="outline-text-2" id="text-1">
 <p>
 夏令营之前我是很想去计算所学体系结构的,
@@ -116,8 +116,8 @@
 </p>
 </div>
 
-<div id="outline-container-orgf5ac123" class="outline-3">
-<h3 id="orgf5ac123"><span class="section-number-3">1.1.</span> <a href="#orgf5ac123">夏令营</a></h3>
+<div id="outline-container-orgfc18c7a" class="outline-3">
+<h3 id="orgfc18c7a"><span class="section-number-3">1.1.</span> <a href="#orgfc18c7a">夏令营</a></h3>
 <div class="outline-text-3" id="text-1-1">
 <p>
 被直接拒的学校
@@ -159,8 +159,8 @@
 </div>
 </div>
 
-<div id="outline-container-org8c31db0" class="outline-2">
-<h2 id="org8c31db0"><span class="section-number-2">2.</span> <a href="#org8c31db0">打工</a></h2>
+<div id="outline-container-org798b3b5" class="outline-2">
+<h2 id="org798b3b5"><span class="section-number-2">2.</span> <a href="#org798b3b5">打工</a></h2>
 <div class="outline-text-2" id="text-2">
 <p>
 跟了wy之后就开始学静态分析了, 还是继续看三下没看完的南大程序分析课,
@@ -174,8 +174,8 @@ p.s. IDEA 写 Java 是真的方便
 </div>
 </div>
 
-<div id="outline-container-orgca75c11" class="outline-2">
-<h2 id="orgca75c11"><span class="section-number-2">3.</span> <a href="#orgca75c11">我的928</a></h2>
+<div id="outline-container-org4ad2366" class="outline-2">
+<h2 id="org4ad2366"><span class="section-number-2">3.</span> <a href="#org4ad2366">我的928</a></h2>
 <div class="outline-text-2" id="text-3">
 <p>
 928还算平静, 照着群里的通知一步步做就行了.
@@ -191,8 +191,8 @@ p.s. IDEA 写 Java 是真的方便
 </p>
 </div>
 
-<div id="outline-container-orgb0fa744" class="outline-3">
-<h3 id="orgb0fa744"><span class="section-number-3">3.1.</span> <a href="#orgb0fa744">928演唱会(bushi</a></h3>
+<div id="outline-container-orgdb11b47" class="outline-3">
+<h3 id="orgdb11b47"><span class="section-number-3">3.1.</span> <a href="#orgdb11b47">928演唱会(bushi</a></h3>
 <div class="outline-text-3" id="text-3-1">
 <p>
 演唱会是在二运开的, 和jdh一起去听着玩, 一开始因为没有门票被挡在外面,
@@ -200,7 +200,7 @@ p.s. IDEA 写 Java 是真的方便
 </p>
 
 
-<figure id="org54e4a43">
+<figure id="org2a49c6a">
 <img src="2022-09-28/outside.jpg" alt="outside.jpg" width="60%" style="margin-left: auto; margin-right: auto;">
 
 <figcaption><span class="figure-number">&#22270;2&nbsp; </span>被挡在外面</figcaption>
@@ -212,7 +212,7 @@ p.s. IDEA 写 Java 是真的方便
 </p>
 
 
-<figure id="org4e91a86">
+<figure id="org76b3ab0">
 <img src="2022-09-28/auditorium.jpg" alt="auditorium.jpg" width="80%" style="margin-left: auto; margin-right: auto;">
 
 <figcaption><span class="figure-number">&#22270;3&nbsp; </span>在观众席上</figcaption>
@@ -225,8 +225,8 @@ p.s. IDEA 写 Java 是真的方便
 </div>
 </div>
 
-<div id="outline-container-orge11d2d3" class="outline-2">
-<h2 id="orge11d2d3"><span class="section-number-2">4.</span> <a href="#orge11d2d3">他们的928</a></h2>
+<div id="outline-container-org6cd26cc" class="outline-2">
+<h2 id="org6cd26cc"><span class="section-number-2">4.</span> <a href="#org6cd26cc">他们的928</a></h2>
 <div class="outline-text-2" id="text-4">
 <ul class="org-ul">
 <li>翔去了复旦NLP</li>
@@ -246,8 +246,8 @@ p.s. IDEA 写 Java 是真的方便
 </div>
 </div>
 
-<div id="outline-container-org6a437e0" class="outline-2">
-<h2 id="org6a437e0"><span class="section-number-2">5.</span> <a href="#org6a437e0">总结</a></h2>
+<div id="outline-container-org6e352c1" class="outline-2">
+<h2 id="org6e352c1"><span class="section-number-2">5.</span> <a href="#org6e352c1">总结</a></h2>
 <div class="outline-text-2" id="text-5">
 <p>
 保研最难的两关都过了, 也貌似遇到了不错的导师.
@@ -262,7 +262,7 @@ p.s. IDEA 写 Java 是真的方便
   <tr><td class="org-right">Author</td><td class="org-left">thebesttv</td></tr>
   <tr><td class="org-right">Created</td><td class="org-left">2022-09-28 16:27</td></tr>
   <tr><td class="org-right">Modified</td><td class="org-left">2022-09-29 10:48</td></tr>
-  <tr><td class="org-right">Generated</td><td class="org-left">2022-12-05 22:16</td></tr>
+  <tr><td class="org-right">Generated</td><td class="org-left">2022-12-06 02:44</td></tr>
   <tr><td class="org-right">Version</td><td class="org-left"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 28.2 (<a href="https://orgmode.org">Org</a> mode 9.5.5)</td></tr>
   <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://github.com/thebesttv/thebesttv.github.io/blob/main/content/daily/2022-09-28.org">content/daily/2022-09-28.org</a></td></tr>
 </table>
