--- a/content/picore-adb.html
+++ b/content/picore-adb.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-<!-- 2022-12-05 22:16 -->
+<!-- 2022-12-06 02:44 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>piCore 编译 ADB 小记</title>
@@ -46,19 +46,19 @@
 <h2>&#30446;&#24405;</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#orgab6627c">1. 烧录 piCore</a></li>
-<li><a href="#orgc48f065">2. 基本配置</a></li>
-<li><a href="#org2c2655e">3. 各种依赖</a>
+<li><a href="#orga2d02df">1. 烧录 piCore</a></li>
+<li><a href="#orgd1086c5">2. 基本配置</a></li>
+<li><a href="#org5380fb0">3. 各种依赖</a>
 <ul>
-<li><a href="#orgf747212">3.1. protobuf</a></li>
-<li><a href="#org0c229d3">3.2. brotli</a></li>
-<li><a href="#org6d23a12">3.3. GoogleTest</a></li>
-<li><a href="#orga129f28">3.4. Go</a></li>
+<li><a href="#org1bca0f5">3.1. protobuf</a></li>
+<li><a href="#org01284cd">3.2. brotli</a></li>
+<li><a href="#orgda1fb53">3.3. GoogleTest</a></li>
+<li><a href="#org6530759">3.4. Go</a></li>
 </ul>
 </li>
-<li><a href="#org3560abd">4. 编译 ADB</a></li>
-<li><a href="#org927f59e">5. 内网穿透</a></li>
-<li><a href="#org5b63534">6. 小结</a></li>
+<li><a href="#org635df90">4. 编译 ADB</a></li>
+<li><a href="#orga5df517">5. 内网穿透</a></li>
+<li><a href="#orgb6a8f6b">6. 小结</a></li>
 </ul>
 </div>
 </nav>
@@ -85,8 +85,8 @@
 然后交叉编译啥的就更不会了😵
 </p>
 
-<div id="outline-container-orgab6627c" class="outline-2">
-<h2 id="orgab6627c"><span class="section-number-2">1.</span> <a href="#orgab6627c">烧录 piCore</a></h2>
+<div id="outline-container-orga2d02df" class="outline-2">
+<h2 id="orga2d02df"><span class="section-number-2">1.</span> <a href="#orga2d02df">烧录 piCore</a></h2>
 <div class="outline-text-2" id="text-1">
 <p>
 Tiny Core 目前的版本是 13.X, 在<a href="http://tinycorelinux.net/downloads.html">官网的下载页面</a>底部有各种移植版的<a href="http://tinycorelinux.net/ports.html">下载页面</a>.
@@ -130,8 +130,8 @@ Device     Boot  Start    End Sectors Size Id Type
 </div>
 </div>
 
-<div id="outline-container-orgc48f065" class="outline-2">
-<h2 id="orgc48f065"><span class="section-number-2">2.</span> <a href="#orgc48f065">基本配置</a></h2>
+<div id="outline-container-orgd1086c5" class="outline-2">
+<h2 id="orgd1086c5"><span class="section-number-2">2.</span> <a href="#orgd1086c5">基本配置</a></h2>
 <div class="outline-text-2" id="text-2">
 <p>
 登录后, 有两个最重要的事情
@@ -254,8 +254,8 @@ sudo sed -i <span style="font-style: italic;">'/tc/s_/bin/sh_/bin/bash_'</span> 
 </div>
 </div>
 
-<div id="outline-container-org2c2655e" class="outline-2">
-<h2 id="org2c2655e"><span class="section-number-2">3.</span> <a href="#org2c2655e">各种依赖</a></h2>
+<div id="outline-container-org5380fb0" class="outline-2">
+<h2 id="org5380fb0"><span class="section-number-2">3.</span> <a href="#org5380fb0">各种依赖</a></h2>
 <div class="outline-text-2" id="text-3">
 <p>
 准备 ADB 需要的<a href="https://github.com/nmeum/android-tools#dependencies">依赖</a>, 有的可以用 <code>tce-load</code> 直接下载
@@ -274,8 +274,8 @@ sudo sed -i <span style="font-style: italic;">'/tc/s_/bin/sh_/bin/bash_'</span> 
 </p>
 </div>
 
-<div id="outline-container-orgf747212" class="outline-3">
-<h3 id="orgf747212"><span class="section-number-3">3.1.</span> <a href="#orgf747212">protobuf</a></h3>
+<div id="outline-container-org1bca0f5" class="outline-3">
+<h3 id="org1bca0f5"><span class="section-number-3">3.1.</span> <a href="#org1bca0f5">protobuf</a></h3>
 <div class="outline-text-3" id="text-3-1">
 <p>
 安装方法见 <a href="https://github.com/protocolbuffers/protobuf/blob/main/src/README.md">README</a>, 下载源码 <a href="https://github.com/protocolbuffers/protobuf/releases/download/v21.4/protobuf-cpp-3.21.4.tar.gz"><code>protobuf-cpp-3.21.4.tar.gz</code></a> 编译
@@ -309,8 +309,8 @@ mksquashfs dest-protobuf/ tbt-protobuf-3.21.4.tcz
 </div>
 </div>
 
-<div id="outline-container-org0c229d3" class="outline-3">
-<h3 id="org0c229d3"><span class="section-number-3">3.2.</span> <a href="#org0c229d3">brotli</a></h3>
+<div id="outline-container-org01284cd" class="outline-3">
+<h3 id="org01284cd"><span class="section-number-3">3.2.</span> <a href="#org01284cd">brotli</a></h3>
 <div class="outline-text-3" id="text-3-2">
 <p>
 从 <a href="https://github.com/google/brotli">repo</a> 下载 <a href="https://github.com/google/brotli/archive/refs/tags/v1.0.9.tar.gz"><code>brotli-1.0.9.tar.gz</code></a> 编译打包
@@ -332,8 +332,8 @@ mv tbt-brotli-1.0.9.tcz /mnt/mmcblk0p2/tce/optional/
 </div>
 </div>
 
-<div id="outline-container-org6d23a12" class="outline-3">
-<h3 id="org6d23a12"><span class="section-number-3">3.3.</span> <a href="#org6d23a12">GoogleTest</a></h3>
+<div id="outline-container-orgda1fb53" class="outline-3">
+<h3 id="orgda1fb53"><span class="section-number-3">3.3.</span> <a href="#orgda1fb53">GoogleTest</a></h3>
 <div class="outline-text-3" id="text-3-3">
 <p>
 从 <a href="https://github.com/google/googletest">repo</a> 下载 <a href="https://github.com/google/googletest/archive/refs/tags/release-1.12.1.tar.gz"><code>googletest-release-1.12.1.tar.gz</code></a> , 根据 <a href="https://github.com/google/googletest/blob/main/googletest/README.md">README</a> 编译打包
@@ -366,8 +366,8 @@ mv tbt-googletest-1.12.1.tcz /mnt/mmcblk0p2/tce/optional/
 </div>
 </div>
 
-<div id="outline-container-orga129f28" class="outline-3">
-<h3 id="orga129f28"><span class="section-number-3">3.4.</span> <a href="#orga129f28">Go</a></h3>
+<div id="outline-container-org6530759" class="outline-3">
+<h3 id="org6530759"><span class="section-number-3">3.4.</span> <a href="#org6530759">Go</a></h3>
 <div class="outline-text-3" id="text-3-4">
 <p>
 从<a href="https://go.dev/dl/">这里</a>下载已经编译好的 Go 语言工具链 (<a href="https://go.dev/dl/go1.19.linux-armv6l.tar.gz"><code>go1.19.linux-armv6l.tar.gz</code></a>).
@@ -395,8 +395,8 @@ mv tbt-googletest-1.12.1.tcz /mnt/mmcblk0p2/tce/optional/
 </div>
 </div>
 
-<div id="outline-container-org3560abd" class="outline-2">
-<h2 id="org3560abd"><span class="section-number-2">4.</span> <a href="#org3560abd">编译 ADB</a></h2>
+<div id="outline-container-org635df90" class="outline-2">
+<h2 id="org635df90"><span class="section-number-2">4.</span> <a href="#org635df90">编译 ADB</a></h2>
 <div class="outline-text-2" id="text-4">
 <p>
 从 <a href="https://github.com/nmeum/android-tools">repo</a> 下载 release <a href="https://github.com/nmeum/android-tools/releases/download/31.0.3p2/android-tools-31.0.3p2.tar.xz"><code>android-tools-31.0.3p2.tar.xz</code></a>
@@ -447,8 +447,8 @@ tce-load -i tbt-android-tools-31.0.3p2.tcz
 </div>
 </div>
 
-<div id="outline-container-org927f59e" class="outline-2">
-<h2 id="org927f59e"><span class="section-number-2">5.</span> <a href="#org927f59e">内网穿透</a></h2>
+<div id="outline-container-orga5df517" class="outline-2">
+<h2 id="orga5df517"><span class="section-number-2">5.</span> <a href="#orga5df517">内网穿透</a></h2>
 <div class="outline-text-2" id="text-5">
 <p>
 为了远程访问方便, 加一个 frp 的包.
@@ -541,8 +541,8 @@ mv tbt-frp-0.44.0.tcz /mnt/mmcblk0p2/tce/optional/
 </div>
 </div>
 
-<div id="outline-container-org5b63534" class="outline-2">
-<h2 id="org5b63534"><span class="section-number-2">6.</span> <a href="#org5b63534">小结</a></h2>
+<div id="outline-container-orgb6a8f6b" class="outline-2">
+<h2 id="orgb6a8f6b"><span class="section-number-2">6.</span> <a href="#orgb6a8f6b">小结</a></h2>
 <div class="outline-text-2" id="text-6">
 <p>
 感觉用 piCore 再自己编译打包各种东西着实有点麻烦了,
@@ -567,7 +567,7 @@ mv tbt-frp-0.44.0.tcz /mnt/mmcblk0p2/tce/optional/
   <tr><td class="org-right">Author</td><td class="org-left">thebesttv</td></tr>
   <tr><td class="org-right">Created</td><td class="org-left">2022-08-09 23:51</td></tr>
   <tr><td class="org-right">Modified</td><td class="org-left">2022-12-05 22:13</td></tr>
-  <tr><td class="org-right">Generated</td><td class="org-left">2022-12-05 22:16</td></tr>
+  <tr><td class="org-right">Generated</td><td class="org-left">2022-12-06 02:44</td></tr>
   <tr><td class="org-right">Version</td><td class="org-left"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 28.2 (<a href="https://orgmode.org">Org</a> mode 9.5.5)</td></tr>
   <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://github.com/thebesttv/thebesttv.github.io/blob/main/content/picore-adb.org">content/picore-adb.org</a></td></tr>
 </table>
