Update from https://github.com/thebesttv/eserver-static/commit/7dc3eaa93e9e1dc806137af976d85abdf78643b1

--- a/content/daily/2022-09-28.html
+++ b/content/daily/2022-09-28.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-<!-- 2022-12-08 14:36 -->
+<!-- 2022-12-08 14:44 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>保研回忆录</title>
@@ -46,19 +46,19 @@
 <h2>&#30446;&#24405;</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#orgd7ac26a">1. 暑假</a>
+<li><a href="#org19c2987">1. 暑假</a>
 <ul>
-<li><a href="#org5676417">1.1. 夏令营</a></li>
+<li><a href="#org4d622f0">1.1. 夏令营</a></li>
 </ul>
 </li>
-<li><a href="#org9140bba">2. 打工</a></li>
-<li><a href="#orga259bc0">3. 我的928</a>
+<li><a href="#orgbe82caf">2. 打工</a></li>
+<li><a href="#org50b753d">3. 我的928</a>
 <ul>
-<li><a href="#orga65c2e1">3.1. 928演唱会(bushi</a></li>
+<li><a href="#org0b97cfb">3.1. 928演唱会(bushi</a></li>
 </ul>
 </li>
-<li><a href="#orge6245ea">4. 他们的928</a></li>
-<li><a href="#orgae33b37">5. 总结</a></li>
+<li><a href="#orgfc94b07">4. 他们的928</a></li>
+<li><a href="#orge51d508">5. 总结</a></li>
 </ul>
 </div>
 </nav>
@@ -68,7 +68,7 @@
 </p>
 
 
-<figure id="orge8404f2">
+<figure id="org364f4b6">
 <img src="2022-09-28/928-nju.jpg" alt="928-nju.jpg" width="80%" style="margin-left: auto; margin-right: auto;">
 
 <figcaption><span class="figure-number">&#22270;1&nbsp; </span>南大offer</figcaption>
@@ -91,8 +91,8 @@
 <li><a href="http://www.cskaoyan.com/thread-237791-1-1.html">中科院计算所实验室情况简要介绍</a></li>
 </ul>
 
-<div id="outline-container-orgd7ac26a" class="outline-2">
-<h2 id="orgd7ac26a"><span class="section-number-2">1.</span> <a href="#orgd7ac26a">暑假</a></h2>
+<div id="outline-container-org19c2987" class="outline-2">
+<h2 id="org19c2987"><span class="section-number-2">1.</span> <a href="#org19c2987">暑假</a></h2>
 <div class="outline-text-2" id="text-1">
 <p>
 夏令营之前我是很想去计算所学体系结构的,
@@ -116,8 +116,8 @@
 </p>
 </div>
 
-<div id="outline-container-org5676417" class="outline-3">
-<h3 id="org5676417"><span class="section-number-3">1.1.</span> <a href="#org5676417">夏令营</a></h3>
+<div id="outline-container-org4d622f0" class="outline-3">
+<h3 id="org4d622f0"><span class="section-number-3">1.1.</span> <a href="#org4d622f0">夏令营</a></h3>
 <div class="outline-text-3" id="text-1-1">
 <p>
 被直接拒的学校
@@ -159,8 +159,8 @@
 </div>
 </div>
 
-<div id="outline-container-org9140bba" class="outline-2">
-<h2 id="org9140bba"><span class="section-number-2">2.</span> <a href="#org9140bba">打工</a></h2>
+<div id="outline-container-orgbe82caf" class="outline-2">
+<h2 id="orgbe82caf"><span class="section-number-2">2.</span> <a href="#orgbe82caf">打工</a></h2>
 <div class="outline-text-2" id="text-2">
 <p>
 跟了wy之后就开始学静态分析了, 还是继续看三下没看完的南大程序分析课,
@@ -174,8 +174,8 @@ p.s. IDEA 写 Java 是真的方便
 </div>
 </div>
 
-<div id="outline-container-orga259bc0" class="outline-2">
-<h2 id="orga259bc0"><span class="section-number-2">3.</span> <a href="#orga259bc0">我的928</a></h2>
+<div id="outline-container-org50b753d" class="outline-2">
+<h2 id="org50b753d"><span class="section-number-2">3.</span> <a href="#org50b753d">我的928</a></h2>
 <div class="outline-text-2" id="text-3">
 <p>
 928还算平静, 照着群里的通知一步步做就行了.
@@ -191,8 +191,8 @@ p.s. IDEA 写 Java 是真的方便
 </p>
 </div>
 
-<div id="outline-container-orga65c2e1" class="outline-3">
-<h3 id="orga65c2e1"><span class="section-number-3">3.1.</span> <a href="#orga65c2e1">928演唱会(bushi</a></h3>
+<div id="outline-container-org0b97cfb" class="outline-3">
+<h3 id="org0b97cfb"><span class="section-number-3">3.1.</span> <a href="#org0b97cfb">928演唱会(bushi</a></h3>
 <div class="outline-text-3" id="text-3-1">
 <p>
 演唱会是在二运开的, 和jdh一起去听着玩, 一开始因为没有门票被挡在外面,
@@ -200,7 +200,7 @@ p.s. IDEA 写 Java 是真的方便
 </p>
 
 
-<figure id="orga48e560">
+<figure id="org837e4f3">
 <img src="2022-09-28/outside.jpg" alt="outside.jpg" width="60%" style="margin-left: auto; margin-right: auto;">
 
 <figcaption><span class="figure-number">&#22270;2&nbsp; </span>被挡在外面</figcaption>
@@ -212,7 +212,7 @@ p.s. IDEA 写 Java 是真的方便
 </p>
 
 
-<figure id="org7aeb8af">
+<figure id="org83a5aa2">
 <img src="2022-09-28/auditorium.jpg" alt="auditorium.jpg" width="80%" style="margin-left: auto; margin-right: auto;">
 
 <figcaption><span class="figure-number">&#22270;3&nbsp; </span>在观众席上</figcaption>
@@ -225,8 +225,8 @@ p.s. IDEA 写 Java 是真的方便
 </div>
 </div>
 
-<div id="outline-container-orge6245ea" class="outline-2">
-<h2 id="orge6245ea"><span class="section-number-2">4.</span> <a href="#orge6245ea">他们的928</a></h2>
+<div id="outline-container-orgfc94b07" class="outline-2">
+<h2 id="orgfc94b07"><span class="section-number-2">4.</span> <a href="#orgfc94b07">他们的928</a></h2>
 <div class="outline-text-2" id="text-4">
 <ul class="org-ul">
 <li>翔去了复旦NLP</li>
@@ -246,8 +246,8 @@ p.s. IDEA 写 Java 是真的方便
 </div>
 </div>
 
-<div id="outline-container-orgae33b37" class="outline-2">
-<h2 id="orgae33b37"><span class="section-number-2">5.</span> <a href="#orgae33b37">总结</a></h2>
+<div id="outline-container-orge51d508" class="outline-2">
+<h2 id="orge51d508"><span class="section-number-2">5.</span> <a href="#orge51d508">总结</a></h2>
 <div class="outline-text-2" id="text-5">
 <p>
 保研最难的两关都过了, 也貌似遇到了不错的导师.
@@ -262,7 +262,7 @@ p.s. IDEA 写 Java 是真的方便
   <tr><td class="org-right">Author</td><td class="org-left">thebesttv</td></tr>
   <tr><td class="org-right">Created</td><td class="org-left">2022-09-28 16:27</td></tr>
   <tr><td class="org-right">Modified</td><td class="org-left">2022-09-29 10:48</td></tr>
-  <tr><td class="org-right">Generated</td><td class="org-left">2022-12-08 14:36</td></tr>
+  <tr><td class="org-right">Generated</td><td class="org-left">2022-12-08 14:44</td></tr>
   <tr><td class="org-right">Version</td><td class="org-left"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 28.2 (<a href="https://orgmode.org">Org</a> mode 9.5.5)</td></tr>
   <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://raw.githubusercontent.com/thebesttv/thebesttv.github.io/main/content/daily/2022-09-28.org">2022-09-28.org</a></td></tr>
 </table>
