--- a/content/collections/tools.html
+++ b/content/collections/tools.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-<!-- 2022-12-08 14:36 -->
+<!-- 2022-12-08 14:44 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>有用的工具</title>
@@ -45,18 +45,18 @@
 <h2>&#30446;&#24405;</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#orge17c15f">1. 笔记</a></li>
-<li><a href="#orgd84e3cc">2. 推送</a></li>
-<li><a href="#orgb8a4e6b">3. Git</a></li>
-<li><a href="#orgb2575b0">4. XBox</a></li>
-<li><a href="#org5265e5c">5. Bilibili</a></li>
+<li><a href="#org8921c99">1. 笔记</a></li>
+<li><a href="#orge52cda2">2. 推送</a></li>
+<li><a href="#orgcb07363">3. Git</a></li>
+<li><a href="#org513a9ae">4. XBox</a></li>
+<li><a href="#org15a6852">5. Bilibili</a></li>
 </ul>
 </div>
 </nav>
 <hr style="width: 80%;">
 
-<div id="outline-container-orge17c15f" class="outline-2">
-<h2 id="orge17c15f"><span class="section-number-2">1.</span> <a href="#orge17c15f">笔记</a></h2>
+<div id="outline-container-org8921c99" class="outline-2">
+<h2 id="org8921c99"><span class="section-number-2">1.</span> <a href="#org8921c99">笔记</a></h2>
 <div class="outline-text-2" id="text-1">
 <ul class="org-ul">
 <li><a href="https://github.com/xournalpp/xournalpp/">Xournal++</a> 支持数位板的开源笔记软件</li>
@@ -64,8 +64,8 @@
 </div>
 </div>
 
-<div id="outline-container-orgd84e3cc" class="outline-2">
-<h2 id="orgd84e3cc"><span class="section-number-2">2.</span> <a href="#orgd84e3cc">推送</a></h2>
+<div id="outline-container-orge52cda2" class="outline-2">
+<h2 id="orge52cda2"><span class="section-number-2">2.</span> <a href="#orge52cda2">推送</a></h2>
 <div class="outline-text-2" id="text-2">
 <ul class="org-ul">
 <li><a href="https://ntfy.sh/">ntfy.sh</a> 一行 curl 即可使用的推送服务.
@@ -75,8 +75,8 @@
 </div>
 </div>
 
-<div id="outline-container-orgb8a4e6b" class="outline-2">
-<h2 id="orgb8a4e6b"><span class="section-number-2">3.</span> <a href="#orgb8a4e6b">Git</a></h2>
+<div id="outline-container-orgcb07363" class="outline-2">
+<h2 id="orgcb07363"><span class="section-number-2">3.</span> <a href="#orgcb07363">Git</a></h2>
 <div class="outline-text-2" id="text-3">
 <ul class="org-ul">
 <li><a href="https://gource.io/">Gource - a software version control visualization tool</a>
@@ -90,8 +90,8 @@
 </div>
 </div>
 
-<div id="outline-container-orgb2575b0" class="outline-2">
-<h2 id="orgb2575b0"><span class="section-number-2">4.</span> <a href="#orgb2575b0">XBox</a></h2>
+<div id="outline-container-org513a9ae" class="outline-2">
+<h2 id="org513a9ae"><span class="section-number-2">4.</span> <a href="#org513a9ae">XBox</a></h2>
 <div class="outline-text-2" id="text-4">
 <ul class="org-ul">
 <li><a href="https://github.com/zhxie/pcap2socks">pcap2socks</a> 跨平台, 简易, 可以直接利用 SOCKS 代理的加速器, 见<a href="../pcap2socks.html">使用 pcap2socks 加速 XBox</a>
@@ -102,8 +102,8 @@
 </div>
 </div>
 
-<div id="outline-container-org5265e5c" class="outline-2">
-<h2 id="org5265e5c"><span class="section-number-2">5.</span> <a href="#org5265e5c">Bilibili</a></h2>
+<div id="outline-container-org15a6852" class="outline-2">
+<h2 id="org15a6852"><span class="section-number-2">5.</span> <a href="#org15a6852">Bilibili</a></h2>
 <div class="outline-text-2" id="text-5">
 <ul class="org-ul">
 <li><a href="https://github.com/nICEnnnnnnnLee/BilibiliDown">BilibiliDown</a> 视频下载</li>
@@ -117,7 +117,7 @@
   <tr><td class="org-right">Author</td><td class="org-left"></td></tr>
   <tr><td class="org-right">Created</td><td class="org-left"></td></tr>
   <tr><td class="org-right">Modified</td><td class="org-left">2022-12-05 21:48</td></tr>
-  <tr><td class="org-right">Generated</td><td class="org-left">2022-12-08 14:36</td></tr>
+  <tr><td class="org-right">Generated</td><td class="org-left">2022-12-08 14:44</td></tr>
   <tr><td class="org-right">Version</td><td class="org-left"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 28.2 (<a href="https://orgmode.org">Org</a> mode 9.5.5)</td></tr>
   <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://raw.githubusercontent.com/thebesttv/thebesttv.github.io/main/content/collections/tools.org">tools.org</a></td></tr>
 </table>
