--- a/content/daily/2021-05-20.html
+++ b/content/daily/2021-05-20.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-<!-- 2022-12-08 14:36 -->
+<!-- 2022-12-08 14:44 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>520快乐</title>
@@ -46,9 +46,9 @@
 <h2>&#30446;&#24405;</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org10b42e1">1. 水水体育课</a></li>
-<li><a href="#org1bef18a">2. 又是一轮毕业季</a></li>
-<li><a href="#orgdfbf812">3. 520 点灯</a></li>
+<li><a href="#org9ba7e1f">1. 水水体育课</a></li>
+<li><a href="#orgf344450">2. 又是一轮毕业季</a></li>
+<li><a href="#org385592b">3. 520 点灯</a></li>
 </ul>
 </div>
 </nav>
@@ -57,8 +57,8 @@
 虽然84我的节日，不过一大早刷着空间还挺欢乐的，就祝我的朋友们快乐叭😃
 </p>
 
-<div id="outline-container-org10b42e1" class="outline-2">
-<h2 id="org10b42e1"><span class="section-number-2">1.</span> <a href="#org10b42e1">水水体育课</a></h2>
+<div id="outline-container-org9ba7e1f" class="outline-2">
+<h2 id="org9ba7e1f"><span class="section-number-2">1.</span> <a href="#org9ba7e1f">水水体育课</a></h2>
 <div class="outline-text-2" id="text-1">
 <p>
 果然体侧第一天的体育课超级舒服，虽然50米、引体向上啥的测得不咋的，不过挺舒服的，哈哈。还帮一个女生仰卧起坐的时候按腿，快乐😉。
@@ -66,8 +66,8 @@
 </div>
 </div>
 
-<div id="outline-container-org1bef18a" class="outline-2">
-<h2 id="org1bef18a"><span class="section-number-2">2.</span> <a href="#org1bef18a">又是一轮毕业季</a></h2>
+<div id="outline-container-orgf344450" class="outline-2">
+<h2 id="orgf344450"><span class="section-number-2">2.</span> <a href="#orgf344450">又是一轮毕业季</a></h2>
 <div class="outline-text-2" id="text-2">
 <p>
 今天是本科毕业生拍照，好多人穿着学士服在图书馆前面的草坪和台阶拍照，
@@ -86,8 +86,8 @@
 </div>
 </div>
 
-<div id="outline-container-orgdfbf812" class="outline-2">
-<h2 id="orgdfbf812"><span class="section-number-2">3.</span> <a href="#orgdfbf812">520 点灯</a></h2>
+<div id="outline-container-org385592b" class="outline-2">
+<h2 id="org385592b"><span class="section-number-2">3.</span> <a href="#org385592b">520 点灯</a></h2>
 <div class="outline-text-2" id="text-3">
 <p>
 简直是去看人的😓
@@ -105,7 +105,7 @@
 偷偷盗一张亦憨的520全图🤫😉
 </p>
 
-<figure id="org46f71c4">
+<figure id="orge461edf">
 <img src="./2021-05-20/lights-3.jpg" alt="lights-3.jpg" width="80%" style="margin-left: auto; margin-right: auto;">
 
 </figure>
@@ -117,7 +117,7 @@
   <tr><td class="org-right">Author</td><td class="org-left">thebesttv</td></tr>
   <tr><td class="org-right">Created</td><td class="org-left">2021-05-20 07:51</td></tr>
   <tr><td class="org-right">Modified</td><td class="org-left">2022-10-21 09:56</td></tr>
-  <tr><td class="org-right">Generated</td><td class="org-left">2022-12-08 14:36</td></tr>
+  <tr><td class="org-right">Generated</td><td class="org-left">2022-12-08 14:44</td></tr>
   <tr><td class="org-right">Version</td><td class="org-left"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 28.2 (<a href="https://orgmode.org">Org</a> mode 9.5.5)</td></tr>
   <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://raw.githubusercontent.com/thebesttv/thebesttv.github.io/main/content/daily/2021-05-20.org">2021-05-20.org</a></td></tr>
 </table>
