--- a/content/emacs/org-hyperlink.html
+++ b/content/emacs/org-hyperlink.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-<!-- 2022-12-08 14:36 -->
+<!-- 2022-12-08 14:44 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Org-mode Hyperlinks</title>
@@ -46,19 +46,19 @@
 <h2>&#30446;&#24405;</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org8a00969">1. URLs</a>
+<li><a href="#org0c9300b">1. URLs</a>
 <ul>
-<li><a href="#orga1d7e55">1.1. Info</a></li>
+<li><a href="#orgd8c9656">1.1. Info</a></li>
 </ul>
 </li>
 <li><a href="#hlinks">2. Headings</a></li>
-<li><a href="#orge11cd75">3. Files</a></li>
-<li><a href="#orgc8b8ea1">4. Named Elements</a></li>
-<li><a href="#orgf0e0a1e">5. Dedicated Targets</a></li>
-<li><a href="#org2fa3312">6. Radio Targets</a></li>
+<li><a href="#orgade916e">3. Files</a></li>
+<li><a href="#orgb70ee8f">4. Named Elements</a></li>
+<li><a href="#org151fa79">5. Dedicated Targets</a></li>
+<li><a href="#org3a2f94f">6. Radio Targets</a></li>
 <li><a href="#example-section">7. Something to Refer to</a>
 <ul>
-<li><a href="#org1331e31">7.1. A sub-section</a></li>
+<li><a href="#orgd5faf04">7.1. A sub-section</a></li>
 </ul>
 </li>
 </ul>
@@ -66,12 +66,12 @@
 </nav>
 <hr style="width: 80%;">
 
-<div id="outline-container-org8a00969" class="outline-2">
-<h2 id="org8a00969"><span class="section-number-2">1.</span> <a href="#org8a00969">URLs</a></h2>
+<div id="outline-container-org0c9300b" class="outline-2">
+<h2 id="org0c9300b"><span class="section-number-2">1.</span> <a href="#org0c9300b">URLs</a></h2>
 <div class="outline-text-2" id="text-1">
 </div>
-<div id="outline-container-orga1d7e55" class="outline-3">
-<h3 id="orga1d7e55"><span class="section-number-3">1.1.</span> <a href="#orga1d7e55">Info</a></h3>
+<div id="outline-container-orgd8c9656" class="outline-3">
+<h3 id="orgd8c9656"><span class="section-number-3">1.1.</span> <a href="#orgd8c9656">Info</a></h3>
 <div class="outline-text-3" id="text-1-1">
 <p>
 Use the <code>info</code> link type to link to an Info manual or a specific node. <br>
@@ -113,8 +113,8 @@ Use <code>[[* Headings]]</code> to directly refer to the name of a heading.  Not
 that there's only one asterisk (<code>*</code>), no matter how deep the heading is.
 </p>
 <p class="verse">
-<code>see Section [[* Named Elements]]</code> &rarr; see Section <a href="#orgc8b8ea1">4</a>;<br>
-<code>see the [[* A sub-section][sub-section]]</code> &rarr; see the <a href="#org1331e31">sub-section</a>.<br>
+<code>see Section [[* Named Elements]]</code> &rarr; see Section <a href="#orgb70ee8f">4</a>;<br>
+<code>see the [[* A sub-section][sub-section]]</code> &rarr; see the <a href="#orgd5faf04">sub-section</a>.<br>
 </p>
 
 <p>
@@ -123,8 +123,8 @@ Use <code>C-c C-o</code> to nevigate to the target, and <code>C-c &amp;</code> t
 </div>
 </div>
 
-<div id="outline-container-orge11cd75" class="outline-2">
-<h2 id="orge11cd75"><span class="section-number-2">3.</span> <a href="#orge11cd75">Files</a></h2>
+<div id="outline-container-orgade916e" class="outline-2">
+<h2 id="orgade916e"><span class="section-number-2">3.</span> <a href="#orgade916e">Files</a></h2>
 <div class="outline-text-2" id="text-3">
 <p>
 You can go to a specific line in a file with by appending <code>::N</code> at the
@@ -134,8 +134,8 @@ can't be exported to HTML.
 </div>
 </div>
 
-<div id="outline-container-orgc8b8ea1" class="outline-2">
-<h2 id="orgc8b8ea1"><span class="section-number-2">4.</span> <a href="#orgc8b8ea1">Named Elements</a></h2>
+<div id="outline-container-orgb70ee8f" class="outline-2">
+<h2 id="orgb70ee8f"><span class="section-number-2">4.</span> <a href="#orgb70ee8f">Named Elements</a></h2>
 <div class="outline-text-2" id="text-4">
 <p>
 Elements can be given a name:
@@ -163,7 +163,7 @@ Three main elements that can be named:
 
 <p>
 You can refer to named elements using <code>[[named source block]]</code>, e.g.
-Fig. <a href="#orgdc215d7">1</a>, Listing <a href="#orgc68d4e0">1</a>, and Table <a href="#orgabb0e60">1</a>.
+Fig. <a href="#org5c0ddc4">1</a>, Listing <a href="#orgd0af508">1</a>, and Table <a href="#org1796a7e">1</a>.
 </p>
 
 <p>
@@ -180,24 +180,24 @@ order to get proper numbering.
 </div>
 </div>
 
-<div id="outline-container-orgf0e0a1e" class="outline-2">
-<h2 id="orgf0e0a1e"><span class="section-number-2">5.</span> <a href="#orgf0e0a1e">Dedicated Targets</a></h2>
+<div id="outline-container-org151fa79" class="outline-2">
+<h2 id="org151fa79"><span class="section-number-2">5.</span> <a href="#org151fa79">Dedicated Targets</a></h2>
 <div class="outline-text-2" id="text-5">
 <p>
 Dedicated targets can be used to refer to a paragraph or an item in a
 list.
 </p>
 <ul class="org-ul">
-<li>paragraph: <code>[[target][prefixed sentence]]</code> &rarr; <a href="#org46d25ec">prefixed sentence</a></li>
+<li>paragraph: <code>[[target][prefixed sentence]]</code> &rarr; <a href="#org719b3f6">prefixed sentence</a></li>
 <li>unordered list:  <code>the [[unordered target]]^th in the list</code> &rarr;
-the <a href="#org4577d59">3</a><sup>th</sup> in the list</li>
-<li>ordered list: <code>[[ordered target][lalala]]</code> &rarr; <a href="#org452f1a2">lalala</a></li>
+the <a href="#org42bb1b4">3</a><sup>th</sup> in the list</li>
+<li>ordered list: <code>[[ordered target][lalala]]</code> &rarr; <a href="#orgfe9efc2">lalala</a></li>
 </ul>
 </div>
 </div>
 
-<div id="outline-container-org2fa3312" class="outline-2">
-<h2 id="org2fa3312"><span class="section-number-2">6.</span> <a href="#org2fa3312">Radio Targets</a></h2>
+<div id="outline-container-org3a2f94f" class="outline-2">
+<h2 id="org3a2f94f"><span class="section-number-2">6.</span> <a href="#org3a2f94f">Radio Targets</a></h2>
 <div class="outline-text-2" id="text-6">
 <p>
 A radio target radiates its position.  It is enclosed in three angular
@@ -207,14 +207,14 @@ brackets, e.g. <code>&lt;&lt;&lt;thebesttv&gt;&gt;&gt;</code> and <code>&lt;&lt;
 
 <p>
 When a radio target is defined, any occurence of that word (or the
-words) in the document, e.g. <a href="#orgaa1954d">thebesttv</a>, is automatically linked to the
+words) in the document, e.g. <a href="#orga76d82f">thebesttv</a>, is automatically linked to the
 originating target.  This can be used for linking all the occurences of
-a terminology with its definition.  See the song of "<a href="#orgf31da3f">do re me</a>".
+a terminology with its definition.  See the song of "<a href="#orgfc988dd">do re me</a>".
 </p>
 
 <p>
 See the manual: <a href="https://orgmode.org/manual/Radio-Targets.html">4.3 Radio Targets</a>.
-Again, <a href="#orgaa1954d">thebesttv</a> and <a href="#orgf31da3f">do re me</a>.
+Again, <a href="#orga76d82f">thebesttv</a> and <a href="#orgfc988dd">do re me</a>.
 </p>
 </div>
 </div>
@@ -243,29 +243,29 @@ This word---&#8203;<span style="text-decoration: underline;">&lt;&lt;&lt;thebest
 </div>
 
 <p>
-<a id="org46d25ec"></a> This is a sentence prefixed with a <i>dedicated target</i>.
+<a id="org719b3f6"></a> This is a sentence prefixed with a <i>dedicated target</i>.
 </p>
 
 <ul class="org-ul">
 <li>unordered list</li>
 <li>some item</li>
-<li><a id="org4577d59"></a> target in an unordered list</li>
+<li><a id="org42bb1b4"></a> target in an unordered list</li>
 </ul>
 
 
 <ol class="org-ol">
 <li>ordered list</li>
-<li><a id="org452f1a2"></a> target in an ordered list</li>
+<li><a id="orgfe9efc2"></a> target in an ordered list</li>
 </ol>
 
 <p>
-This word&#x2014;<a id="orgaa1954d">thebesttv</a>&#x2014;is a radio target.
-<a id="orgf31da3f">Do re me</a>, a radio target, also a <a href="https://en.wikipedia.org/wiki/Do-Re-Mi">song</a>.
+This word&#x2014;<a id="orga76d82f">thebesttv</a>&#x2014;is a radio target.
+<a id="orgfc988dd">Do re me</a>, a radio target, also a <a href="https://en.wikipedia.org/wiki/Do-Re-Mi">song</a>.
 </p>
 </div>
 
-<div id="outline-container-org1331e31" class="outline-3">
-<h3 id="org1331e31"><span class="section-number-3">7.1.</span> <a href="#org1331e31">A sub-section</a></h3>
+<div id="outline-container-orgd5faf04" class="outline-3">
+<h3 id="orgd5faf04"><span class="section-number-3">7.1.</span> <a href="#orgd5faf04">A sub-section</a></h3>
 <div class="outline-text-3" id="text-7-1">
 <div class="org-src-container">
 <pre class="src src-org"><span style="text-decoration: underline;">{{{image(50)}}}</span>
@@ -290,20 +290,20 @@ This word&#x2014;<a id="orgaa1954d">thebesttv</a>&#x2014;is a radio target.
 </div>
 
 
-<figure id="orgdc215d7">
+<figure id="org5c0ddc4">
 <img src="../daily/2021-05-20/lights-3.jpg" alt="lights-3.jpg" width="50%" style="margin-left: auto; margin-right: auto;">
 
 <figcaption><span class="figure-number">&#22270;1&nbsp; </span>sample image</figcaption>
 </figure>
 
 <div class="org-src-container">
-<label class="org-src-name"><span class="listing-number">&#20195;&#30721;1&nbsp; </span>sample code</label><pre class="src src-elisp" id="orgc68d4e0">(<span style="font-weight: bold;">let</span> ((x 2))
+<label class="org-src-name"><span class="listing-number">&#20195;&#30721;1&nbsp; </span>sample code</label><pre class="src src-elisp" id="orgd0af508">(<span style="font-weight: bold;">let</span> ((x 2))
   (coderef)
   (1+ x))
 </pre>
 </div>
 
-<table id="orgabb0e60">
+<table id="org1796a7e">
 <caption class="t-above"><span class="table-number">&#34920;1&nbsp;</span> sample table</caption>
 
 <colgroup>
@@ -338,10 +338,10 @@ This word&#x2014;<a id="orgaa1954d">thebesttv</a>&#x2014;is a radio target.
 </div>
 <div id="postamble" class="status">
 <hr><table class="postamble">
-  <tr><td class="org-right">Author</td><td class="org-left"><a href="#orgaa1954d">thebesttv</a></td></tr>
+  <tr><td class="org-right">Author</td><td class="org-left"><a href="#orga76d82f">thebesttv</a></td></tr>
   <tr><td class="org-right">Created</td><td class="org-left">2022-09-22 20:15</td></tr>
   <tr><td class="org-right">Modified</td><td class="org-left">2022-12-04 18:20</td></tr>
-  <tr><td class="org-right">Generated</td><td class="org-left">2022-12-08 14:36</td></tr>
+  <tr><td class="org-right">Generated</td><td class="org-left">2022-12-08 14:44</td></tr>
   <tr><td class="org-right">Version</td><td class="org-left"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 28.2 (<a href="https://orgmode.org">Org</a> mode 9.5.5)</td></tr>
   <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://raw.githubusercontent.com/thebesttv/thebesttv.github.io/main/content/emacs/org-hyperlink.org">org-hyperlink.org</a></td></tr>
 </table>
